--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,19 @@
 Package: outlieR
-Title: What the Package Does (one line, title case)
+Title: Functional Rarity indices computations
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: c(
+  person("Matthias", "Grenié", email = "matthias.grenie@ens-lyon.fr",
+    role = c("aut", "cre"))
+  person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr",
+    role = "aut"))
+Description: Computes functional rarity indices as proposed by Violle et al.
+    Various indices can be computed using both regional and local information.
+    Most function need a table of sites and species present, plus traits table
+    for all the present species. It can also abundance weighted metrics.
 Depends: R (>= 3.2.2)
 License: What license is it under?
 LazyData: true
+Imports:
+  dplyr (>= 0.4.3)
+URL: https://github.com/Rekyt/outlieR
+BugReports: https://github.com/Rekyt/outlieR/issues
