--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Depends: R (>= 3.2.2)
 License: What license is it under?
 LazyData: true
 Imports:
+  cluster,
   dplyr (>= 0.4.3)
 URL: https://github.com/Rekyt/outlieR
 BugReports: https://github.com/Rekyt/outlieR/issues
