--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: outlieR
 Title: Functional Rarity indices computations
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: c(
   person("Matthias", "Grenié", email = "matthias.grenie@ens-lyon.fr",
     role = c("aut", "cre")),
@@ -10,11 +10,13 @@ Description: Computes functional rarity indices as proposed by Violle et al.
     Various indices can be computed using both regional and local information.
     Most function need a table of sites and species present, plus traits table
     for all the present species. It can also abundance weighted metrics.
-Depends: R (>= 3.2.2)
+Depends:
+    R (>= 3.2.2)
 License: What license is it under?
 LazyData: true
 Imports:
-  cluster,
-  dplyr (>= 0.4.3)
+    cluster,
+    dplyr (>= 0.4.3)
 URL: https://github.com/Rekyt/outlieR
 BugReports: https://github.com/Rekyt/outlieR/issues
+RoxygenNote: 5.0.1
