--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: outlieR
 Title: Functional Rarity indices computations
 Version: 0.0.1
 Authors@R: c(
-  person("Matthias", "Grenié", email = "matthias.grenie@ens-lyon.fr",
+  person("Matthias", "Greni\u00e9", email = "matthias.grenie@ens-lyon.fr",
     role = c("aut", "cre")),
   person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr",
     role = "aut"))
@@ -10,13 +10,14 @@ Description: Computes functional rarity indices as proposed by Violle et al.
     Various indices can be computed using both regional and local information.
     Most function need a table of sites and species present, plus traits table
     for all the present species. It can also abundance weighted metrics.
-Depends: 
+Depends:
     R (>= 3.2.2)
-License: What license is it under?
+License: GPL (>= 2)
 LazyData: true
-Imports: 
+Imports:
     cluster,
-    dplyr (>= 0.4.3)
+    dplyr (>= 0.4.3),
+    moments
 URL: https://github.com/Rekyt/outlieR
 BugReports: https://github.com/Rekyt/outlieR/issues
 RoxygenNote: 5.0.1
