Update documentation with matrix Si and Ui

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(agg_ind)
 export(compute_dist_matrix)
 export(distinctiveness)
 export(pres_distinctiveness)
+export(pres_sparseness)
+export(pres_uniqueness)
 export(sparseness)
 export(uniqueness)
 importFrom(dplyr,"%>%")
