--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ Suggests: knitr,
     rmarkdown,
     testthat,
     microbenchmark,
-    ggplot2
+    ggplot2,
+    reshape2
 VignetteBuilder: knitr
