--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(agg_ind)
 export(compute_dist_matrix)
 export(distinctiveness)
 export(pres_distinctiveness)
-export(pres_sparseness)
+export(pres_scarcity)
 export(pres_uniqueness)
-export(sparseness)
+export(scarcity)
 export(uniqueness)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
