Added support for sparse matrices for distinctiveness

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ Suggests: knitr,
     testthat,
     microbenchmark,
     ggplot2,
-    reshape2
+    reshape2,
+    Matrix
 VignetteBuilder: knitr
