--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(pres_distinctiveness)
 export(pres_scarcity)
 export(pres_uniqueness)
 export(scarcity)
+export(tidy_to_matrix)
 export(uniqueness)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
