Included function to go from matrix to tidy df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(agg_ind)
 export(compute_dist_matrix)
 export(distinctiveness)
+export(matrix_to_tidy)
 export(pres_distinctiveness)
 export(pres_scarcity)
 export(pres_uniqueness)
