Modified restrictedness help function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(compute_dist_matrix)
 export(distinctiveness)
 export(matrix_to_tidy)
 export(pres_distinctiveness)
+export(pres_restrictedness)
 export(pres_scarcity)
 export(pres_uniqueness)
+export(restrictedness)
 export(scarcity)
 export(tidy_to_matrix)
 export(uniqueness)
