--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,5 @@ export(tidy_to_matrix)
 export(uniqueness)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
+importFrom(methods,is)
+importFrom(stats,na.exclude)
