Changed function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,12 @@ export(compute_dist_matrix)
 export(distinctiveness)
 export(funrar)
 export(matrix_to_tidy)
-export(pres_distinctiveness)
-export(pres_restrictedness)
-export(pres_scarcity)
-export(pres_uniqueness)
 export(restrictedness)
 export(scarcity)
+export(table_distinctiveness)
+export(table_restrictedness)
+export(table_scarcity)
+export(table_uniqueness)
 export(tidy_to_matrix)
 export(uniqueness)
 importFrom(dplyr,"%>%")
