--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: outlieR
 Title: Functional Rarity Indices Computations
 Version: 0.0.1
 Authors@R: c(
-  person("Matthias", "Grenié", email = "matthias.grenie@ens-lyon.fr", role = c("aut", "cre")),
+  person("Matthias", "Grenié", email = "matthias.grenie@gmail.com", role = c("aut", "cre")),
   person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr", role = "aut"),
   person("Caroline", "Tucker", email = "carolinemtucker@gmail.com", role = "aut")
   )
