--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(funrar)
 export(matrix_to_tidy)
 export(restrictedness)
 export(scarcity)
+export(scarcity_stack)
 export(table_restrictedness)
-export(table_scarcity)
 export(table_uniqueness)
 export(tidy_to_matrix)
 export(uniqueness)
