--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(distinctiveness_stack)
 export(funrar)
 export(matrix_to_tidy)
 export(restrictedness)
+export(restrictedness_stack)
 export(scarcity)
 export(scarcity_stack)
-export(table_restrictedness)
 export(table_uniqueness)
 export(tidy_to_matrix)
 export(uniqueness)
