Renamed uniqueness functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ export(restrictedness)
 export(restrictedness_stack)
 export(scarcity)
 export(scarcity_stack)
-export(table_uniqueness)
 export(tidy_to_matrix)
 export(uniqueness)
+export(uniqueness_stack)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(methods,is)
