--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,12 @@ export(compute_dist_matrix)
 export(distinctiveness)
 export(distinctiveness_stack)
 export(funrar)
-export(matrix_to_tidy)
+export(matrix_to_stack)
 export(restrictedness)
 export(restrictedness_stack)
 export(scarcity)
 export(scarcity_stack)
-export(tidy_to_matrix)
+export(stack_to_matrix)
 export(uniqueness)
 export(uniqueness_stack)
 importFrom(dplyr,"%>%")
