--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compute_dist_matrix)
 export(distinctiveness)
 export(distinctiveness_stack)
 export(funrar)
+export(funrar_stack)
 export(matrix_to_stack)
 export(restrictedness)
 export(restrictedness_stack)
