--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(compute_dist_matrix)
 export(distinctiveness)
+export(distinctiveness_com)
 export(distinctiveness_stack)
 export(funrar)
 export(funrar_stack)
