--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(matrix_to_stack)
 export(restrictedness)
 export(restrictedness_stack)
 export(scarcity)
+export(scarcity_com)
 export(scarcity_stack)
 export(stack_to_matrix)
 export(uniqueness)
