--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,13 +23,15 @@ Imports:
 URL: https://github.com/Rekyt/funrar
 BugReports: https://github.com/Rekyt/funrar/issues
 RoxygenNote: 5.0.1
-Suggests: knitr,
-    rmarkdown,
-    testthat,
-    microbenchmark,
+Suggests:
+    ade4,
     ggplot2,
-    reshape2,
+    knitr,
     Matrix,
+    microbenchmark,
+    reshape2,
+    rmarkdown,
     StatMatch,
-    ade4
+    testthat
+
 VignetteBuilder: knitr
