--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: funrar
-Title: Functional Rarity Indices Computations
+Title: Functional Rarity Indices Computation
 Version: 1.0.0
 Authors@R: c(
   person("Matthias", "Grenié", email = "matthias.grenie@gmail.com", role = c("aut", "cre")),
@@ -17,7 +17,6 @@ LazyData: true
 Imports:
     cluster,
     dplyr (>= 0.4.3),
-    moments,
     methods,
     stats
 URL: https://github.com/Rekyt/funrar
@@ -34,3 +33,4 @@ Suggests:
     StatMatch,
     testthat
 VignetteBuilder: knitr
+Encoding: UTF-8
