--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
   person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr", role = "aut"),
   person("Caroline", "Tucker", email = "carolinemtucker@gmail.com", role = "aut")
   )
-Description: Computes functional rarity indices as proposed by Violle et al (in revision).
+Description: Computes functional rarity indices as proposed by Violle et al (accepted).
     Various indices can be computed using both regional and local information.
     Functional Rarity combines both the functional aspect of rarity as well as
     the extent aspect of rarity.
