--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(distinctiveness_com)
 export(distinctiveness_stack)
 export(funrar)
 export(funrar_stack)
+export(make_absolute)
 export(make_relative)
 export(matrix_to_stack)
 export(restrictedness)
