--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(methods,is)
 importFrom(stats,na.exclude)
+importFrom(stats,na.omit)
