--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
   person("Caroline", "Tucker", email = "carolinemtucker@gmail.com", role = "aut")
   )
 Description: Computes functional rarity indices as proposed by Violle et al.
-    (2017, doi: 10.1016/j.tree.2017.02.002). Various indices can be computed
+    (2017) <doi:10.1016/j.tree.2017.02.002>. Various indices can be computed
     using both regional and local information. Functional Rarity combines both
     the functional aspect of rarity as well as the extent aspect of rarity.
 Depends:
