Drafted function to measure rarity dimensions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(funrar_stack)
 export(make_absolute)
 export(make_relative)
 export(matrix_to_stack)
+export(rarity_dimensions)
 export(restrictedness)
 export(restrictedness_stack)
 export(scarcity)
