Update documentation & NAMESPACE after split

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,12 @@
 export(compute_dist_matrix)
 export(distinctiveness)
 export(distinctiveness_com)
+export(distinctiveness_dimensions)
 export(distinctiveness_stack)
 export(funrar)
 export(funrar_stack)
 export(make_relative)
 export(matrix_to_stack)
-export(rarity_dimensions)
 export(restrictedness)
 export(restrictedness_stack)
 export(scarcity)
@@ -16,6 +16,7 @@ export(scarcity_com)
 export(scarcity_stack)
 export(stack_to_matrix)
 export(uniqueness)
+export(uniqueness_dimensions)
 export(uniqueness_stack)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
