Add authors ORCID

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Package: funrar
 Title: Functional Rarity Indices Computation
 Version: 1.2.0
 Authors@R: c(
-  person("Matthias", "Grenié", email = "matthias.grenie@gmail.com", role = c("aut", "cre")),
-  person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr", role = "aut"),
-  person("Caroline", "Tucker", email = "carolinemtucker@gmail.com", role = "aut")
+  person("Matthias", "Grenié", email = "matthias.grenie@gmail.com",
+         role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4659-7522")),
+  person("Pierre", "Denelle", email = "pierre.denelle@cefe.cnrs.fr",
+         role = "aut", comment = c(ORCID = "0000-0001-5037-2281")),
+  person("Caroline", "Tucker", email = "carolinemtucker@gmail.com",
+         role = "aut", comment = c(ORCID = "0000-0002-4871-2010"))
   )
 Description: Computes functional rarity indices as proposed by Violle et al.
     (2017) <doi:10.1016/j.tree.2017.02.002>. Various indices can be computed
