:sparkles:  aliases for all indices fix #29

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,23 @@ export(distinctiveness)
 export(distinctiveness_com)
 export(distinctiveness_dimensions)
 export(distinctiveness_stack)
+export(distinctiveness_tidy)
 export(funrar)
 export(funrar_stack)
 export(make_relative)
 export(matrix_to_stack)
 export(restrictedness)
 export(restrictedness_stack)
+export(restrictedness_tidy)
 export(scarcity)
 export(scarcity_com)
 export(scarcity_stack)
+export(scarcity_tidy)
 export(stack_to_matrix)
 export(uniqueness)
 export(uniqueness_dimensions)
 export(uniqueness_stack)
+export(uniqueness_tidy)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(methods,is)
