--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compute_dist_matrix)
 export(distinctiveness)
 export(distinctiveness_com)
 export(distinctiveness_dimensions)
+export(distinctiveness_range)
 export(distinctiveness_stack)
 export(distinctiveness_tidy)
 export(funrar)
