--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: funrar
 Title: Functional Rarity Indices Computation
-Version: 1.2.2.9000
+Version: 1.2.3
 Authors@R: c(
   person("Matthias", "Grenié", email = "matthias.grenie@gmail.com",
          role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4659-7522")),
@@ -36,7 +36,7 @@ Suggests:
     knitr,
     Matrix,
     rmarkdown,
-    testthat,
+    testthat (>= 2.1.0),
     tidytext
 VignetteBuilder: knitr
 Encoding: UTF-8
