--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: required
 
 before_script:
   - Rscript -e 'remotes::install_cran(c("devtools", "covr", "pkgdown", "spelling"))'
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo tlmgr install framed titling; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo tlmgr install framed titling cancel; fi
 
 r:
   - oldrel
