--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: funrar
 Title: Functional Rarity Indices Computation
-Version: 1.2.3
+Version: 1.3.0
 Authors@R: c(
   person("Matthias", "Grenié", email = "matthias.grenie@gmail.com",
          role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4659-7522")),
@@ -27,7 +27,7 @@ Imports:
     dplyr (>= 0.4.3),
     methods,
     stats
-URL: https://github.com/Rekyt/funrar
+URL: https://rekyt.github.io/funrar/
 BugReports: https://github.com/Rekyt/funrar/issues
 RoxygenNote: 6.1.1
 Suggests:
