Implement global distinctiveness fix #39

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(distinctiveness)
 export(distinctiveness_alt)
 export(distinctiveness_com)
 export(distinctiveness_dimensions)
+export(distinctiveness_global)
 export(distinctiveness_range)
 export(distinctiveness_stack)
 export(distinctiveness_tidy)
