--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,8 +35,11 @@ Suggests:
     knitr,
     Matrix,
     rmarkdown,
-    testthat (>= 2.1.0),
+    testthat (>= 2.99.0),
     tidytext
 VignetteBuilder: knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
+Config/testthat/edition: 3
+Remotes:
+    r-lib/testthat
