--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -44,6 +44,10 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
+      # Add tinytex for PDF vignettes
+      - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
