--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(uniqueness)
 export(uniqueness_dimensions)
 export(uniqueness_stack)
 export(uniqueness_tidy)
+import(Matrix)
 importFrom(methods,is)
 importFrom(stats,na.exclude)
 importFrom(stats,na.omit)
